--- a/ChangeLog
+++ b/ChangeLog
@@ -7,8 +7,9 @@ Version 0.9.1+
 	expected
 	* Indices created by bwa and minimap2 are now versioned
 	* arg1 in external modules is no longer always treated as a path
-	* Added expand_searchdir to external modules API (closes #56)
+	* Added expand_searchpath to external modules API (closes #56)
 	* Fixed bug where detection of Fastq encoding was not performed on the second pair
+	* Renamed --search-dir to --search-path for consistency with other API
 
 Version 0.9.1 2018-07-17 by luispedro
 	* Add biorxiv citation
