--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Version 0.9.1+
 	* Indices created by bwa and minimap2 are now versioned
 	* arg1 in external modules is no longer always treated as a path
 	* Added expand_searchdir to external modules API (closes #56)
+	* Fixed bug where detection of Fastq encoding was not performed on the second pair
 
 Version 0.9.1 2018-07-17 by luispedro
 	* Add biorxiv citation
